Issue #439 - Adjusting the header-nav gap to reduce height and spacing on tablet.

--- a/components/header_nav/header_nav.scss
+++ b/components/header_nav/header_nav.scss
@@ -12,7 +12,7 @@
   .navbar-nav {
     // Forcing the main menu to display as a row.
     flex-direction: row;
-    gap: 40px;
+    gap: 5px 30px;
 
     @keyframes slideup {
       from {
@@ -128,6 +128,10 @@
       .dropdown:hover>.dropdown-menu {
         display: block;
       }
+    }
+
+    @include media-breakpoint-up(lg) {
+      gap: 5px 40px;
     }
   }
 
